Update _config.yml link

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # SITE CONFIGURATION
-baseurl: "/jupiter_cipher"
+baseurl: "/jupiter-cipher"
 url: "https://github.com/s-eclaircir"
 
 # THEME-SPECIFIC CONFIGURATION
