Update authors.yml jc

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -18,3 +18,8 @@ unknown:
   name: Unknown
   avatar:
   url:
+
+jc:
+  name: JC
+  avatar: "https://avatars.githubusercontent.com/u/209198347?v=4"
+  url:
