--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -19,7 +19,7 @@ unknown:
   avatar:
   url:
 
-jc:
-  name: JC
+jC:
+  name: jC
   avatar: "https://avatars.githubusercontent.com/u/209198347?v=4"
   url:
